# ia_robot

./: CMakeLists.txt  README.md  setup.py
config/: joint_names_ia-robot.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ia_robot/share/ia_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ia_robot/share/ia_robot/cmake/: ia_robotConfig.cmake
install/ia_robot/share/ia_robot/launch/: view_ia_robot.launch.py  view_robot.launch.py
install/ia_robot/share/ia_robot/rviz/: view.rviz  (+1 more)
launch/: view.launch.py  view_all_joints.launch.py
log/: latest_build
meshes/: LeftARM02.stl  LeftARM03.stl  LeftARM1.stl  LeftEnd.stl  LeftFrontWheelOrient1.STL  LeftFrontWheelOrient2.stl  LeftFrontwheel.stl  RightARM1.STL  RightARM1.stl  RightARM3.stl  RightEnd.stl  RightFrontWheelOrient1.stl  RightFrontWheelOrient2.stl  Rightbackorient.stl  Rightbackwheel.stl  RihgtARM2.stl  arm1_l.stl  arm1_r.stl  arm2_l.stl  arm2_r.stl  chest.stl  handle_l.stl  handle_r.stl  left_back_rotate.stl  left_back_turn.stl  left_front_turn1.stl  left_front_turn2.stl  left_joint2.stl  left_joint3.stl  left_joint4.stl  right_back_rotate.stl  right_back_turn.stl  right_front_rotate.stl  right_front_turn1.stl  right_front_turn2.stl  right_joint2.stl  right_joint3.stl  right_joint4.stl
rviz/: view.rviz
src/: fk.py  ik.py  relay.py  test.py  test_ik.py
urdf/: base_only.urdf  ia_robot.csv  ia_robot.urdf  ia_robot_new.urdf  two_part_robot.urdf
urdf/ia_robot/: ia_robot.usd
urdf/ia_robot/configuration/: ia_robot_physics.usd  ia_robot_sensor.usd
(+7 files in other folders)
